--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Ionic App</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' *">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
@@ -13,7 +14,6 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
-  <script src = "../node_modules/alertifyjs/build/alertify.js"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
