--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -34,10 +34,16 @@
 
     </form>
   </div>
-  <ion-footer >
-    <ion-toolbar class="login-footer">
-      <h6>Bạn <a>không có tài khoản</a> đăng nhập hoặc <a>quên mật khẩu</a>?</h6>
-      <h6>Vui lòng liên hệ bộ phận kỹ thuật của công ty để được hỗ trợ.</h6>
+</ion-content>
+
+<ion-footer>
+    <ion-toolbar>
+      <p>Bạn quên mật khẩu ?</p>
+      <ion-buttons end>
+        <button ion-button icon-right color="royal">
+          Gửi hỗ trợ
+          <ion-icon name="send"></ion-icon>
+        </button>
+      </ion-buttons>
     </ion-toolbar>
   </ion-footer>
-</ion-content>
