--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -1,4 +1,10 @@
-    <ion-menu [content]="mycontent">
+
+    <ion-menu [content]="mycontent" >
+            <ion-header>
+                    <ion-toolbar>
+                      <ion-title>Menu</ion-title>
+                    </ion-toolbar>
+                  </ion-header>
         <ion-content>
             <ion-list>
                  <button ion-item menuClose (click)="openPage(homePage)">
@@ -13,5 +19,4 @@
             </ion-list>
         </ion-content>
     </ion-menu>
-    
-    <ion-nav #mycontent [root]="rootPage"></ion-nav>
+    <ion-nav #mycontent [root]="rootPage" swipeBackEnabled="false"></ion-nav>
