--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -16,6 +16,9 @@
                 <button ion-item menuClose (click)="openPage(dogsPage)">
                     Dogs
                 </button>
+                <button ion-item menuClose (click)="openPage(listsPage)">
+                    List
+                </button>
             </ion-list>
         </ion-content>
     </ion-menu>
