--- a/src/pages/dogs/dogs.html
+++ b/src/pages/dogs/dogs.html
@@ -1,17 +1,21 @@
-<!--
-  Generated template for the DogsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons start>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
 
-  <ion-navbar>
-    <ion-title>dogs</ion-title>
-  </ion-navbar>
+    <ion-title>Dogs</ion-title>
 
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon ios="ios-notifications" md="md-notifications"></ion-icon>
+      </button>
+    </ion-buttons>
+
+  </ion-toolbar>
 </ion-header>
-
 
 <ion-content padding>
 
