--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,30 @@
-<!-- <!--
-  Generated template for the HomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons start>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
 
-  <ion-navbar>
-    <ion-title>home</ion-title>
-  </ion-navbar>
+    <ion-title>Home</ion-title>
 
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon ios="ios-notifications" md="md-notifications"></ion-icon>
+      </button>
+    </ion-buttons>
+
+  </ion-toolbar>
 </ion-header>
 
-
 <ion-content padding>
+  <h3>Ionic Menu Starter</h3>
 
-</ion-content> 
+  <div>
+  Hello, {{user.fullName}}  <lsd-logout></lsd-logout>
+  </div>
+
+  <button id="button" (click)= "changeText()">Change Text</button>
+
+  <button ion-button secondary menuToggle>Toggle Menu</button>
+</ion-content>
